--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,8 @@ textarea {
   width: 100%;
 }
 
-input[type="submit"] {
+input[type="submit"],
+form#edit-ramen input[type="submit"] {
   color: white;
   border: 1px solid white;
   background-color: black;
@@ -89,7 +90,8 @@ input[type="submit"] {
   transition: all 0.3s;
 }
 
-input[type="submit"]:active {
+input[type="submit"]:active,
+form#edit-ramen input[type="submit"]:active {
   background-color: gray;
 }
 
@@ -99,4 +101,9 @@ form h4 {
   margin: 0.5rem 0;
   color: white;
   background-color: black;
+}
+
+form#edit-ramen input,
+form#edit-ramen textarea {
+  color: rgb(186, 186, 186);
 }
